--- a/Ansible/roles/setup-couchdb-cluster/tasks/main.yaml
+++ b/Ansible/roles/setup-couchdb-cluster/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: setup couchdb cluster | step 1
   become: yes
   uri:
-    url: http://{{ groups['dbMaster'][0] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbMaster:children'][0] }}:5984/{{ cluster_name }}
     status_code: 201
     method: POST
     user: "{{ couchdb_user }}"
@@ -21,7 +21,7 @@
 - name: setup couchdb cluster | step 2
   become: yes
   uri:
-    url: http://{{ groups['dbMaster'][0] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbSlave:children'][0] }}:5984/{{ cluster_name }}
     status_code: 201,409
     method: POST
     user: "{{ couchdb_user }}"
@@ -39,7 +39,7 @@
 - name: steup couchdb cluster | step 3 -- finish
   become: yes
   uri:
-    url: http://{{ groups['dbMaster'][0] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbSlave:children'][1] }}:5984/{{ cluster_name }}
     status_code: 201
     method: POST
     user: "{{ couchdb_user }}"
