--- a/Ansible/deploy_db.yaml
+++ b/Ansible/deploy_db.yaml
@@ -1,14 +1,14 @@
 ---
-- hosts: database
+- hosts: dbServers
   vars_files:
-    - host_vars/couchdb_config.yaml
+    - host_vars/remote_vars.yaml
   gather_facts: true
   roles:
     - role: setup-couchdb
 
-- hosts: masternode
+- hosts: dbMaster
   vars_files:
-    - host_vars/couchdb_config.yaml
+    - host_vars/remote_vars.yaml
   gather_facts: true
   roles:
     - role: setup-couchdb-cluster
