update couch DB

--- a/Ansible/roles/setup-couchdb-cluster/tasks/main.yaml
+++ b/Ansible/roles/setup-couchdb-cluster/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: setup couchdb cluster | step 1
   become: yes
   uri:
-    url: http://{{ groups['dbMaster:children'][0] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbMaster'][0] }}:{{couchdb_port}}/{{ cluster_name }}
     status_code: 201
     method: POST
     user: "{{ couchdb_user }}"
@@ -11,8 +11,8 @@
     return_content: yes
     body_format: json
     body: "{\"action\": \"enable_cluster\", \"bind_address\":\"0.0.0.0\",\
-             \"username\": \"{{ couchdb_user }}\", \"password\":\"{{ couchdb_pass }}\", \"port\": \"5984\",\
-             \"remote_node\": \"{{ item }}\", \"node_count\": \"{{ groups['couchdb'] | length }}\",\
+             \"username\": \"{{ couchdb_user }}\", \"password\":\"{{ couchdb_pass }}\", \"port\": \"{{couchdb_port}}\",\
+             \"remote_node\": \"{{ item }}\", \"node_count\": \"{{ groups['dbServers'] | length }}\",\
              \"remote_current_user\":\"{{ couchdb_user }}\", \"remote_current_password\":\"{{ couchdb_pass }}\"}"
     headers:
       Content-Type: "application/json"
@@ -21,7 +21,7 @@
 - name: setup couchdb cluster | step 2
   become: yes
   uri:
-    url: http://{{ groups['dbSlave:children'][0] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbMaster'][0] }}:{{couchdb_port}}/{{ cluster_name }}
     status_code: 201,409
     method: POST
     user: "{{ couchdb_user }}"
@@ -29,17 +29,28 @@
     force_basic_auth: yes
     return_content: yes
     body_format: json
-    method: POST
     body: "{\"action\": \"add_node\", \"host\":\"{{ item }}\",\
-             \"port\": \"5984\", \"username\": \"{{ couchdb_user }}\", \"password\":\"{{ couchdb_pass }}\"}"
+             \"port\": \"{{ couchdb_port }}\", \"username\": \"{{ couchdb_user }}\", \"password\":\"{{ couchdb_pass }}\"}"
     headers:
       Content-Type: "application/json"
   loop: "{{ groups['dbSlave'] }}"
 
+- name: setup couchdb cluster | step 2.5
+  become: yes
+  uri:
+    url: http://{{ groups['dbMaster'][0] }}:{{couchdb_port}}/
+    status_code: 200,201,409
+    method: GET
+    user: "{{ couchdb_user }}"
+    password:  "{{ couchdb_pass }}"
+    force_basic_auth: yes
+    return_content: yes
+
+
 - name: steup couchdb cluster | step 3 -- finish
   become: yes
   uri:
-    url: http://{{ groups['dbSlave:children'][1] }}:5984/{{ cluster_name }}
+    url: http://{{ groups['dbMaster'][0] }}:{{ couchdb_port }}/{{ cluster_name }}
     status_code: 201
     method: POST
     user: "{{ couchdb_user }}"
@@ -47,7 +58,6 @@
     force_basic_auth: yes
     return_content: yes
     body_format: json
-    method: POST
     body: "{\"action\": \"finish_cluster\"}"
     headers:
       Content-Type: "application/json"
