--- a/Ansible/host_vars/local_vars.yaml
+++ b/Ansible/host_vars/local_vars.yaml
@@ -46,23 +46,47 @@ security_groups:
     port_range_min: 1
     port_range_max: 65535
     remote_ip_prefix: 0.0.0.0/0
+  - name: instance1-security-group
+    description: "security group for instance1 server"
+    protocol: tcp
+    port_range_min: 1
+    port_range_max: 65535
+    remote_ip_prefix: 0.0.0.0/0
+  - name: instance2-security-group
+    description: "security group for instance2 server"
+    protocol: tcp
+    port_range_min: 1
+    port_range_max: 65535
+    remote_ip_prefix: 0.0.0.0/0
+  - name: instance3-security-group
+    description: "security group for instance3 server"
+    protocol: tcp
+    port_range_min: 1
+    port_range_max: 65535
+    remote_ip_prefix: 0.0.0.0/0
+  - name: instance4-security-group
+    description: "security group for instance4 server"
+    protocol: tcp
+    port_range_min: 1
+    port_range_max: 65535
+    remote_ip_prefix: 0.0.0.0/0
 
 # ********************* Instance ****************************************
 instances:
   - name: instance_1
-    security_groups: default,http,ssh,webserver
+    security_groups: default,http,ssh,webserver,instance1-security-group
     volume_ids: '{{ instance1_volumes|default([]) }}'
     volumes: ['volume_db1']
   - name: instance_2
-    security_groups: default,http,ssh,webserver
+    security_groups: default,http,ssh,webserver,instance2-security-group
     volume_ids: '{{ instance2_volumes|default([]) }}'
     volumes: ['volume_db2']
   - name: instance_3
-    security_groups: default,http,ssh,webserver
+    security_groups: default,http,ssh,webserver,instance3-security-group
     volume_ids: '{{ instance3_volumes|default([]) }}'
     volumes: ['volume_db3']
   - name: instance_4
-    security_groups: default,http,ssh,webserver
+    security_groups: default,http,ssh,webserver,instance4-security-group
     volume_ids: '{{ instance4_volumes|default([]) }}'
     volumes: ['volume_db4']
 
