--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ oslo.serialization==2.28.2
 oslo.utils==3.40.3
 pbr==5.1.3
 Pillow==6.0.0
+plotly==4.14.3
 pyparsing==2.4.0
 python-dateutil==2.8.0
 python-keystoneclient==3.19.0
